--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="fun.js"></script>
+    <script type="module" src="fun.js"></script>
+    <script type="module" src="good.js"></script>
   </body>
 </html>
